<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/open_scan_beep"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/scan_beep"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/open_shine_light"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/scan_light"
                android:background="@android:color/transparent"
                android:src="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/camera_location_choice"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/scan_location"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>